# mind_the_gaps

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yaml  run-tests.yaml
real_ranges/: __init__.py  bases.py  constants.py  inf.py  meta.py  range_dict.py  range_set.py  ranges.py  var.py
src/mind_the_gaps/: __init__.py  gaps.py  var.py
tests/: test_endpoint.py  test_extended.py  test_from_string.py  test_gap_contains.py  test_gap_init.py  test_intersection.py  test_subtraction.py  test_union.py  test_x.py  test_xor.py
